--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<h1>Hello, I am Sheeraz Banu</h1>
+<section id="about">
+    <h2>About Me</h2>
+    <img src="your-image.jpg" alt="Your Name">
+    <p>Write a short introduction about yourself here.</p>
+</section>
 
-<h2>I like school</h2>
+<section id="experience">
+    <h2>Experience</h2>
+    <p>Write about your work experiences here.</p>
+</section>
+
+<section id="resume">
+    <h2>Resume</h2>
+    <p>Provide a link to your resume PDF here.</p>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>You can reach me at: your.email@example.com</p>
+    <p>Connect with me on <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a> and <a href="https://www.instagram.com/yourprofile">Instagram</a>.</p>
+</section>
