--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <section id="about">
     <h2>About Me</h2>
-    <img src="your-image.jpg" alt="Your Name">
-    <p>Write a short introduction about yourself here.</p>
+    <img src="your-image.jpg" alt="Sheeraz Banu">
+    <p>Welcome to my side of the internet.</p>
 </section>
 
 <section id="experience">
