--- a/Week2/FollowMe/test.html
+++ b/Week2/FollowMe/test.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="test.css"/>
+
+    <style>
+        /*element selector which applies to all of the tags that is mentioned here 
+        */
+        h3,p{
+            color:purple;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: rgb #3f3f3f;">heading1</h1>
     <h2 style="background-color:yellow; color:red;">heading2</h2>
     <h3>heading3</h3>
+    <h3> h3 twin</h3>
 </body>
 </html>
