--- a/Week2/FollowMe/test.html
+++ b/Week2/FollowMe/test.html
@@ -7,23 +7,23 @@
 
     
     <link rel="stylesheet" href="test.css"/>
-
+<!--internal css-->
     <style>
-        /*element selector which applies to all of the tags that is mentioned here 
-        */
-        h3,p{
-            color:red;
-        }
         p{
-            font-size:24
+            color: red;
         }
+        /*id selector*/
+        #para2{
+            background-color:yellow;
+        }
+       
     </style>
 </head>
 <body>
-    <h1 style="color: rgb #3f3f3f;">heading1</h1>
-    <h2 style="background-color:yellow; color:red;">heading2</h2>
-    <h3>heading3</h3>
-    <h3> h3 twin</h3>
-    <p style="font-size: 48;" >Beer</p>
+    <p id="para1"></p>
+    <p id="para2"></p>
+    <p id="para3"></p>
+    <p id="para4"></p>
+   
 </body>
 </html>
