--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
 
         .background-image {
             width: 100%;
-            height: 50vh; /* Cover the top half of the page */
+            height: 50vh; /* cover the top half of the page */
             background-image: url('https://images.unsplash.com/photo-1687027053816-7abf4894a59a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHx8&w=1000&q=80');
             background-size: cover;
             background-position: center;
@@ -26,7 +26,7 @@
             left: 50%;
             transform: translateX(-50%);
             text-align: center;
-            z-index: 1; /* Place the profile container above the background image */
+            z-index: 1; /* place the profile container above the background image */
         }
 
         .profile-image {
@@ -42,7 +42,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 50vh; /* Cover the bottom half of the page */
+            height: 50vh; /* cover the bottom half of the page */
             background-color: #f0f0f0; /* Background color for the content area */
         }
 
